compilateurDeca/src/test/deca/context/invalid/sans_objet/controle/if_cond_string.deca
// Description:
//    Vérifie que le compilateur rejette un 'if' avec une condition string.
//
// Resultats:
//    Ligne 11: La condition doit être de type boolean 
// 
// Historique:
//    cree le 11/01/2026

{
    if ("hi") { } 
}